<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.patcomp.todoapp.EditItemActivity"
    tools:showIn="@layout/activity_edit_item">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_item"
        android:id="@+id/tvName"
        android:textSize="14dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/eitEditName"
        android:layout_marginLeft="15dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="14dp" />
    </TableRow>
    <!-- just draw a red line -->
    <View
        android:layout_height="0.5dip"
        android:background="#000000" />
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/due_date"
        android:id="@+id/tvDueDate"
        android:textSize="14dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etDueDate"
        android:textSize="14dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:layout_width="0dp"
        android:layout_weight="1"
        />
    </TableRow>
    <View
        android:layout_height="0.5dip"
        android:background="#000000" />
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notes"
        android:id="@+id/tvNotes"
        android:textSize="14dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etNotes"
        android:textSize="14dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:layout_width="0dp"
        android:layout_weight="1"/>
    </TableRow>
    <View
        android:layout_height="0.5dip"
        android:background="#000000" />
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/level"
        android:id="@+id/tvLevel"
        android:textSize="14dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etLevel"
        android:textSize="14dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:layout_width="0dp"
        android:layout_weight="1"/>
    </TableRow>
    <View
        android:layout_height="0.5dip"
        android:background="#000000" />
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip" >
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/status"
        android:id="@+id/tvStatus"
        android:textSize="14dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/etStatus"
        android:textSize="14dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:layout_width="0dp"
        android:layout_weight="1"/>
    </TableRow>
</TableLayout>
